    issue with script access to StatisticsIndexMap - thanks to Stefan
    Grinsted for the report.

  Fix scripts statistics so the query methods work outside of an open
  test dispatch context; they return values for the last test reported
  by the worker thread. This was broken by the support for nested
  tests introduced in the last beta.


The Grinder 3.0-beta29
----------------------

  Nested Tests are supported. That is, you can now use a Test to
  instrument script code that calls things wrapped by other Tests.

  A __target__ field has been added to test proxy wrappers, allowing
  convenient access to the wrapped object.

  New implementation of the HTTPPlugin TCPProxy filter. Key new
  features over the previous filter (which is deprecated):
   - Records to a single script.
   - Basic Authorization is recorded.
   - Modular implementation based on an XSLT style sheet.
   - Requests are grouped together into pages, using simple rules that
     guess the resources belonging to a page based on the resource type.
     Pages are instrumented as separate tests.
   - Name value tokens are identified in URL path parameters and query
     strings and mapped to script variables. Most session tokens that
     encoded in URLs or present in hidden form fields will now be
     handled automatically.

  Several changes to the script API, including:
    net.grinder.plugin.http.HTTPRequest:
     - Removed addHeader(), deleteHeader()
     - Header arrays passed to GET, POST, etc. are now merged with the
       default values held by the HTTPRequest. Previously they setting
       an array on the request overrode all the default values.

    net.grinder.plugininterface.PluginThreadContext:
     - getStartTime(), startTimedSection(), stopTimedSection() have
       been replaced with pauseClock(), resumeClock() to support nested
       tests. (Since now there can be multiple active dispatch contexts).

    net.grinder.script.Statistics: